LU-5299 obdclass: avoid race during Server device mount

Ensure bdev is opened exclusive to ensure atomicity of all
operations during mount process and avoid any side effects
during potential race (dual mount, ...).

But 2.6.38 Kernel introduced some API changes, and
open_bdev_exclusive()/close_bdev_exclusive() need to be replaced
by blkdev_get_by_path()/blkdev_put() calls with explicit setting
of FMODE_EXCL mode.

Signed-off-by: Bruno Faccini <bruno.faccini@intel.com>
Change-Id: I5904553175dd3fdf6fe68b5318ebba2f4b605563